# sloth_auth

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/api/routes/: auth.py
app/core/: config.py  logger.py
app/db/: __init__.py  functions.py  init.sql
app/middlewares/: auth.py
app/schemas/: auth.py  utils.py
app/utils/: email_templates.py  email_utils.py  gen_reset_token.py  gen_verification_code.py  pass_reset_token.py
